# bot-keuangan-pribadi

./: .gitignore  README.md  bot-keuangan.service  bot.py  main.py  pyproject.toml  requirements.txt
config/: settings.py
handlers/: commands.py  messages.py
services/: ai_service.py  sheets_service.py  transaction_service.py
utils/: helpers.py  prompts.py
