[project]
name = "bot-keuangan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-generativeai>=0.8.5",
    "groq>=0.37.1",
    "gspread>=6.2.1",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "pandasai>=2.2.0",
]
